@@ -746,6 +746,7 @@ dvipdf
 dvips
 g77
 icc
+ifl
 ilink
 latex
 lex
@@ -764,6 +765,9 @@ platforms:
 dvipdf
 dvips
 g77
+icc
+ifl
+ilink
 latex
 lex
 lib
